@@ -32,6 +32,7 @@ Version 1.0.7.21
   -  Minor rework of the HTML documentation layout \ W3C compliance (BenBE)
   -  Fixed highlighting error in bash language avoiding keywords in comments (SF #1786314, SF #1564839, BenBE)
   -  Fixed template params for C++ and C# not being highlighted (SF #1772919, BenBE)
+  -  Fixed more reported problems about mirc highlighting
 Version 1.0.7.20
   -  Added language files
      * Genero (logic) and Per (forms) (FOURJ's Genero 4GL) (Lars Gersmann)
